# OER_Scraper

./: README.md  Scraper.py  basic.conf.yaml  pyproject.toml  requirements.txt  test.conf.yaml
oer_scraper/: __init__.py  cli.py  scraper.py
tests/: test_package.py  test_scraper.py
tests/stubs/: test-data.json
